--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "functions": {
-        "api/*.php": {
-            "runtime": "vercel-php@0.5.2"
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.php",
+            "use": "@vercel/php"
         }
-    },
+    ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
+            "src": "/.*",
+            "dest": "/index.php"
         }
     ]
 }
