--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.php",
-            "use": "@vercel/php"
+    "functions": {
+        "api/index.php": {
+            "runtime": "vercel-php@0.3.1"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.php"
+            "dest": "/api/index.php"
         }
-    ]
+    ],
+    "env": {
+        "APP_ENV": "dev",
+        "APP_SECRET": "f3e5069d557011dc716370034c5c66df"
+    }
 }
