--- a/.vercelignore
+++ b/.vercelignore
@@ -1,1 +1,13 @@
-/vendor
+html
+css
+js
+css
+font
+image
+public/bundles
+/templates/race_results
+docker-compose.override.yml
+docker-compose.yml
+translations
+.env
+.git
