--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "knplabs/knp-paginator-bundle": "^6.2",
         "league/csv": "^9.9",
         "nelmio/cors-bundle": "^2.3",
+        "paragonie/sodium_compat": "^1.20",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.21",
         "symfony/asset": "6.2.*",
